--- a/res/layout/activity_nfc_receive.xml
+++ b/res/layout/activity_nfc_receive.xml
@@ -9,6 +9,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/hello_nfc"
-        tools:context=".NfcWriterActivity" />
+        tools:context=".NfcReceiveActivity" />
 
 </RelativeLayout>
