--- a/res/layout/activity_nfc_writer.xml
+++ b/res/layout/activity_nfc_writer.xml
@@ -3,12 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
+    <EditText
+        android:id="@+id/nfc_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:hint="@string/hint_write_nfc_message"
+        android:inputType="text"
         android:text="@string/hello_nfc"
         tools:context=".NfcWriterActivity" />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/nfc_message"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="88dp"
+        android:text="@string/hold_over_nfc_tag"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
